static-files/base/replace-base.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: {name}
  namespace: static-files
spec:
  replacePath:
    path: {path}
